--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
   .hoverEffect {
     @apply cursor-pointer hover:bg-gray-200 rounded-full w-[52px] xl:w-auto h-[52px] xl:h-auto xl:p-3;
   }
+
+  .iconHover {
+    @apply h-10 w-10 cursor-pointer hover:bg-sky-100 rounded-full p-2
+  }
 }
 
 :root {
