--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   }
 
   .iconHover {
-    @apply h-10 w-10 cursor-pointer hover:bg-sky-100 rounded-full p-2
+    @apply h-10 w-10 cursor-pointer hover:bg-sky-100 rounded-full p-2 transition-colors
   }
 }
 
